--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-clap = { version = "4.0", features = ["derive"] }
+clap = { version = "4.4.3", features = ["derive", "unstable-styles"] }
 anyhow = "1.0"
 bc-ur = "0.1.7"
 bc-envelope = "0.5.0"
+anstyle = "1.0.1"
 
 [dev-dependencies]
 assert_cmd = "2.0.12"
