--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,16 +5,16 @@ edition = "2021"
 
 [dependencies]
 dcbor = "0.9.0"
-# dcbor = { path = "../bc-dcbor-rust" }
+# dcbor = { path = "../dcbor" }
 
 bc-ur = "0.2.0"
-# bc-ur = { path = "../bc-ur-rust" }
+# bc-ur = { path = "../bc-ur" }
 
-bc-envelope = "0.6.0"
-# bc-envelope = { path = "../bc-envelope-rust" }
+# bc-envelope = "0.6.0"
+bc-envelope = { path = "../bc-envelope" }
 
 bc-components = "0.5.0"
-# bc-components = { path = "../bc-components-rust" }
+# bc-components = { path = "../bc-components" }
 
 clap = { version = "4.4.3", features = ["derive", "unstable-styles"] }
 anyhow = "1.0"
