--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nvelope"
-version = "0.1.2"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
@@ -10,8 +10,8 @@ dcbor = "0.9.0"
 bc-ur = "0.2.0"
 # bc-ur = { path = "../bc-ur" }
 
-# bc-envelope = "0.6.0"
-bc-envelope = { path = "../bc-envelope" }
+bc-envelope = "0.7.0"
+# bc-envelope = { path = "../bc-envelope" }
 
 bc-components = "0.5.0"
 # bc-components = { path = "../bc-components" }
