--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
-name = "nvelope"
-version = "0.2.0"
+name = "envelope"
+version = "0.3.0"
 edition = "2021"
+description = "Gordian Envelope Command Line Tool."
+authors = ["Blockchain Commons"]
+keywords = ["encoding", "cbor", "binary", "format", "serialization"]
+repository = "https://github.com/BlockchainCommons/bc-envelope-cli-rust"
+readme = "README.md"
 
 [dependencies]
 dcbor = "0.9.0"
@@ -10,8 +15,8 @@ dcbor = "0.9.0"
 bc-ur = "0.2.0"
 # bc-ur = { path = "../bc-ur" }
 
-# bc-envelope = "0.7.0"
-bc-envelope = { path = "../bc-envelope" }
+bc-envelope = "0.9.0"
+# bc-envelope = { path = "../bc-envelope" }
 
 bc-components = "0.5.0"
 # bc-components = { path = "../bc-components" }
