--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,17 +16,17 @@ name = "envelope"
 path = "src/main.rs"
 
 [dependencies]
-dcbor = "0.9.0"
-# dcbor = { path = "../dcbor" }
+# dcbor = "0.9.0"
+dcbor = { path = "../dcbor" }
 
-bc-ur = "0.2.0"
-# bc-ur = { path = "../bc-ur" }
+# bc-ur = "0.2.0"
+bc-ur = { path = "../bc-ur" }
 
-bc-envelope = "0.10.0"
-# bc-envelope = { path = "../bc-envelope" }
+# bc-envelope = "0.10.0"
+bc-envelope = { path = "../bc-envelope" }
 
-bc-components = "0.5.0"
-# bc-components = { path = "../bc-components" }
+# bc-components = "0.5.0"
+bc-components = { path = "../bc-components" }
 
 clap = { version = "4.4.3", features = ["derive", "unstable-styles"] }
 anyhow = "1.0"
