--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,8 @@ dcbor = "0.13"
 bc-ur = "0.3"
 # bc-ur = { path = "../bc-ur" }
 
-bc-envelope = "0.14"
-# bc-envelope = { path = "../bc-envelope" }
+# bc-envelope = "0.14"
+bc-envelope = { path = "../bc-envelope" }
 
 bc-components = "0.9"
 # bc-components = { path = "../bc-components" }
