--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ keywords = ["encoding", "cbor", "binary", "format", "serialization"]
 repository = "https://github.com/BlockchainCommons/bc-envelope-cli-rust"
 readme = "README.md"
 license = "BSD-2-Clause-Patent"
-categories = ["data-structures", "encoding"]
+categories = ["data-structures", "encoding", "command-line-utilities"]
 documentation = "https://docs.rs/bc-envelope-cli"
 
 [[bin]]
