--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ bc-ur = "^0.6.0"
 bc-envelope = "^0.19.0"
 bc-components = "^0.14.0"
 bc-rand = "^0.2.1"
+bc-xid = "^0.1.2"
 
 clap = { version = "^4.4.3", features = ["derive", "unstable-styles"] }
 anyhow = "^1.0.0"
