--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,34 +1,51 @@
 [package]
 name = "bc-envelope-cli"
-version = "0.12.0"
-edition = "2021"
+version = "0.13.0"
+edition = "2024"
 description = "Gordian Envelope Command Line Tool."
 authors = ["Blockchain Commons"]
 repository = "https://github.com/BlockchainCommons/bc-envelope-cli-rust"
 readme = "README.md"
 license = "BSD-2-Clause-Patent"
 documentation = "https://docs.rs/bc-envelope-cli"
-keywords = ["encoding", "cbor", "binary", "format", "serialization"] # Up to five
-categories = ["data-structures", "encoding", "command-line-utilities"] # https://crates.io/category_slugs
+keywords = [
+    "encoding",
+    "cbor",
+    "binary",
+    "format",
+    "serialization",
+] # Up to five
+categories = [
+    "data-structures",
+    "encoding",
+    "command-line-utilities",
+] # https://crates.io/category_slugs
 
 [[bin]]
 name = "envelope"
 path = "src/main.rs"
 
 [dependencies]
-dcbor = "^0.16.2"
-bc-ur = "^0.6.2"
-bc-envelope = "^0.24.0"
-bc-components = "^0.17.0"
-bc-rand = "^0.2.1"
-bc-xid = "^0.5.0"
+dcbor = "^0.18.0"
+bc-ur = "^0.8.0"
+bc-envelope = "^0.27.0"
+bc-components = "^0.20.0"
+bc-rand = "^0.4.0"
+bc-xid = "^0.7.0"
 
 clap = { version = "^4.4.3", features = ["derive", "unstable-styles"] }
 anyhow = "^1.0.0"
 anstyle = "^1.0.1"
 hex = "^0.4.3"
 regex = "^1.9.5"
-ssh-key = { version = "=0.6.6", default-features = false, features = ["dsa", "ecdsa", "rand_core", "std", "crypto", "encryption"] }
+ssh-key = { version = "=0.6.6", default-features = false, features = [
+    "dsa",
+    "ecdsa",
+    "rand_core",
+    "std",
+    "crypto",
+    "encryption",
+] }
 rpassword = "7.3.1"
 
 [dev-dependencies]
